--- a/personal_search/notebook/ÅK_7.ipynb
+++ b/personal_search/notebook/ÅK_7.ipynb
@@ -99,7 +99,7 @@
    ],
    "source": [
     "# Load the data file\n",
-    "file_path = r'C:\\Users\\svanb\\OneDrive\\Python\\Noah_School\\raw_data\\School_choise_Noah.xlsm'\n",
+    "file_path = r'/personal_search/data/School_choise.xlsm'\n",
     "df = pd.read_excel(file_path)\n",
     "\n",
     "# Set display option to show all columns\n",
